# ferrolife

./: Cargo.toml  README.md
src/: app.rs  camera.rs  cells.rs  instance.rs  lib.rs  main.rs  shader.wgsl  simulation.rs  state.rs  texture.rs  vertex.rs
src/shaders/: cells.wgsl  simulation.wgsl
src/ui/: imgui_controls.rs  web_controls.rs
