[package]
name = "ferrolife"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
pollster = "0.4.0"
wgpu = "29.0.1"
winit = "0.30.13"

[lib]
crate-type = ["cdylib", "rlib"]

[target.wasm32.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = { version = "0.3.95", features = ["Document", "Window", "Element"] }
