[package]
name = "ferrolife"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.102"
bytemuck = { version = "1.25.0", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.10"
image = { version = "0.25.6", default-features = true }
log = "0.4.29"
pollster = "0.4.0"
web-time = "1.1.0"
wgpu = "29.0.1"
winit = "0.30.13"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
imgui = "0.12.0"
imgui-wgpu = "0.28.0"
imgui-winit-support = "0.13.0"
rfd = "0.15.4"

[lib]
crate-type = ["cdylib", "rlib"]

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.118"
wasm-bindgen-futures = "0.4.68"
web-sys = { version = "0.3.95", features = ["Document", "Window", "Element", "Event", "EventTarget", "HtmlElement", "HtmlInputElement"] }

# See https://github.com/trunk-rs/trunk/issues/991#issuecomment-3139927457
[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['--enable-bulk-memory', '--enable-nontrapping-float-to-int']

# See https://github.com/trunk-rs/trunk/issues/991#issuecomment-3139927457
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--enable-bulk-memory', '--enable-nontrapping-float-to-int']

[[bin]]
name = "ferrolife"
